@@ -5,6 +5,17 @@ HISTORY
 1.3 (unreleased)
 ------------------
 
+- Adding field to configure formats.
+
+  This option enables you to override and add custom formats. A format
+  is for example the style that get applied when you press the bold
+  button inside the editor. TinyMCE is equipped with a text formatter
+  engine that enables you to specify exacly what it should produce
+  when the user clicks the bold button.
+
+  See http://www.tinymce.com/wiki.php/Configuration:formats.
+  [malthe]
+
 - Use TinyMCE compressor to provide editor and plugins
   [tom_gross]
 
